@@ -11,23 +11,23 @@ import static org.junit.Assert.*;
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertTrue(result.containsAll(expect));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertTrue(result.containsAll(expect));
     }
 
     @Test
     public void whenAscCompare() {
-        List<String> input = Arrays.asList("K2/SK1/SSK1",
+        List<String> input = List.of("K2/SK1/SSK1",
                 "K1/SK1/SSK2",
                 "K1/SK1/SSK1",
                 "K2/SK1",
@@ -36,7 +36,7 @@ public class DepartmentsTest {
                 "K1",
                 "K2/SK1/SSK2");
 
-        List<String> expect = Arrays.asList("K1",
+        List<String> expect = List.of("K1",
                 "K1/SK1",
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
@@ -53,7 +53,7 @@ public class DepartmentsTest {
 
     @Test
     public void whenDescCompare() {
-        List<String> input = Arrays.asList("K2/SK1/SSK1",
+        List<String> input = List.of("K2/SK1/SSK1",
                 "K1/SK1/SSK2",
                 "K1/SK1/SSK1",
                 "K2/SK1",
@@ -62,7 +62,7 @@ public class DepartmentsTest {
                 "K1",
                 "K2/SK1/SSK2");
 
-        List<String> expect = Arrays.asList("K2",
+        List<String> expect = List.of("K2",
                 "K2/SK1",
                 "K2/SK1/SSK1",
                 "K2/SK1/SSK2",
